--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "gulp": "^3.9.1"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.16.0",
     "browser-sync": "^2.17.2",
-    "gulp-react": "^3.1.0",
+    "gulp-babel": "^6.1.2",
     "gulp-sourcemaps": "^2.0.0"
   }
 }
