--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "express": "^4.14.0",
-    "gulp": "^3.9.1"
-  },
   "devDependencies": {
-    "babel-preset-es2015": "^6.16.0",
-    "browser-sync": "^2.17.2",
-    "gulp-babel": "^6.1.2",
-    "gulp-sourcemaps": "^2.0.0"
+    "source-map-loader": "^0.1.5",
+    "ts-loader": "^0.9.0",
+    "typescript": "^2.0.3",
+    "typings": "^1.4.0",
+    "webpack": "^1.13.2"
+  },
+  "dependencies": {
+    "@types/react": "^0.14.39",
+    "@types/react-dom": "^0.14.17",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2"
   }
 }
