--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "gulp": "^3.9.1"
   },
   "devDependencies": {
+    "babel-plugin-transform-react-jsx": "^6.8.0",
     "babel-preset-es2015": "^6.16.0",
-    "browser-sync": "^2.17.2",
+    "browser-sync": "^2.17.3",
+    "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "gulp-sourcemaps": "^2.0.0"
+    "gulp-sourcemaps": "^2.0.1"
   }
 }
