--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0",
-    "gulp": "^3.9.1"
+    "express": "^4.14.0",    
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2"
   },
   "devDependencies": {
+    "gulp": "^3.9.1",
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
     "babel-plugin-transform-react-jsx": "^6.8.0",
     "babel-preset-es2015": "^6.16.0",
-    "browser-sync": "^2.17.3",
-    "gulp": "^3.9.1",
+    "babel-preset-react": "^6.16.0",
+    "browser-sync": "^2.17.3",    
     "gulp-babel": "^6.1.2",
-    "gulp-sourcemaps": "^2.0.1"
+    "gulp-sourcemaps": "^2.0.1",
+    "webpack": "^1.13.2"
   }
 }
